[project]
name = "rfmeter"
version = "0.1.0"
description = "ImmersionRC RF Power Meter logger"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pyqt6>=6.11.0",
    "pyserial>=3.5",
    "typer>=0.24",
]

[project.scripts]
rfmeter = "rfmeter.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
